data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_29.wast
;; 10. **Test Description**: A cross-module call chain initiated within an `if` instruction, with cascaded calls to imported and subsequently exported functions, simulating a deep function call stack.     **Constraint**: Ensures that complex chains of calls within control flow sections don't lead to stack overflows or state corruption.     **Goal**: Finds deep stack handling issues and incorrect reset mechanisms in deeply nested call scenarios.  Each test is designed to trigger differential behavior based on control flow mishandling between module boundaries, ensuring rigorous verification of the WASM implementations.

(assert_invalid
  (module
    (func $deep-call-stack-test (export "test") (param i32) (result i32)
      (if (param i32) (result i32)
        (local.get 0)  ;; Condition
        (then 
          (call $imported-func (local.get 0)) ;; Call to imported function
        )
        (else 
          (block (result i32)
            (call $imported-func (local.get 0))  ;; Another call within block
            (br 0 (local.get 0))  ;; Breaking to handle deep nesting
          )
        )
      )
    )
    (import "env" "importedFunc" (func $imported-func (param i32) (result i32)))
  )
  "type mismatch"
)